[package]
name = "psp22"
version = "3.0.0"
edition = "2021"
authors = ["Cardinal"]
homepage = "https://github.com/Cardinal-Cryptography/PSP22"
repository = "https://github.com/Cardinal-Cryptography/PSP22"
license = "Apache-2.0"
readme = "README.md"
description = "Minimal implementation of PSP22 token standard in pure ink!"
exclude = [".github/*"]

[dependencies]
ink = { git = "https://github.com/use-ink/ink.git", branch = "master", default-features = false, features = [
  "unstable-hostfn",
] }

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = ["ink/std"]
ink-as-dependency = []
